// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toMatchSnapshot null 1`] = `null`;

exports[`toMatchSnapshot shallow 1`] = `
.gzMTbA {
  padding: 4em;
  background: papayawhip;
}

<section
  className="sc-bwzfXH gzMTbA"
>
  <styled.h1>
    Hello World, this is my first styled component!
  </styled.h1>
</section>
`;

exports[`toMatchSnapshot test-renderer 1`] = `
.gzMTbA {
  padding: 4em;
  background: papayawhip;
}

.jASgrB {
  font-size: 1.5em;
  -webkit-text-align: center;
  text-align: center;
  color: palevioletred;
}

.jASgrB:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.jASgrB em {
  color: green;
}

@media (min-width: 600px) {
  .jASgrB {
    color: blue;
  }
}

<section
  className="sc-bwzfXH gzMTbA"
>
  <h1
    className="sc-htpNat jASgrB"
  >
    Hello World, this is my first styled component!
  </h1>
</section>
`;

exports[`toMatchSnapshot when horizontal must be display:inline 1`] = `
<styled.div
  horizontal={true}
>
  <div
    className="sc-bdVaJa huqire"
  >
    text
  </div>
</styled.div>
`;
